[gd_scene load_steps=13 format=3 uid="uid://cmptivo27x86p"]

[ext_resource type="Script" path="res://ui/inventory/subscenes/resistance_info.gd" id="1_6hyc8"]
[ext_resource type="FontFile" uid="uid://cjg2va2gx341j" path="res://assets/fonts/nippo/OTF/Nippo-Regular.otf" id="2_qhoxw"]
[ext_resource type="Texture2D" uid="uid://u68l1bngaa7u" path="res://ui/hud/assets/ck_3_bar.svg" id="3_jw7oo"]
[ext_resource type="FontFile" uid="uid://pxyfff4ijb64" path="res://assets/fonts/nippo/OTF/Nippo-Medium.otf" id="5_hq22r"]
[ext_resource type="FontFile" uid="uid://bkvompws14vh5" path="res://assets/fonts/hind/Hind-Regular.ttf" id="6_fnn2d"]
[ext_resource type="PackedScene" uid="uid://taiib681wkvl" path="res://ui/subscenes/progress_bar.tscn" id="6_t6mx6"]
[ext_resource type="Texture2D" uid="uid://cqbuach1xakxp" path="res://ui/hud/assets/blood_resistance.svg" id="6_wmwr2"]
[ext_resource type="Texture2D" uid="uid://cok6af1uuonbi" path="res://ui/hud/assets/under_progressbar.svg" id="7_yl4jj"]
[ext_resource type="Texture2D" uid="uid://cxmd500i2iyjs" path="res://ui/hud/assets/dodge_chance_progressbar.svg" id="8_g7fh3"]
[ext_resource type="Texture2D" uid="uid://dxuvcb4qof7fk" path="res://ui/hud/assets/flask_resistance.svg" id="10_ecmql"]
[ext_resource type="Texture2D" uid="uid://ce68w0bjcy2ci" path="res://ui/hud/assets/drug_resistance.svg" id="11_uai4j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_470qu"]
bg_color = Color(0.129412, 0.129412, 0.129412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ResistanceInfo" type="VBoxContainer"]
clip_contents = true
offset_right = 393.0
offset_bottom = 598.0
theme_override_constants/separation = 0
script = ExtResource("1_6hyc8")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qhoxw")
theme_override_font_sizes/font_size = 32
text = "Resistenz"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 0

[node name="Ck3ProgressBar" type="TextureProgressBar" parent="HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 60.0
fill_mode = 4
texture_progress = ExtResource("3_jw7oo")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_right = 10

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/separation = 0

[node name="ItemNameLabel" type="Label" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("5_hq22r")
theme_override_font_sizes/font_size = 20
text = "Regenmantel"

[node name="MarginContainer2" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ItemDescriptionLabel" type="RichTextLabel" parent="HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 127)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/line_separation = -2
theme_override_fonts/normal_font = ExtResource("6_fnn2d")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Resistenz erh√∂ht den Schwellenwert, bis ein negativ-Effekt aktiviert wird."

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_bottom = 30

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 206)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_470qu")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="StatVBox" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/StatVBox"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/StatVBox/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 18

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/StatVBox/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("6_wmwr2")
stretch_mode = 5

[node name="BleedResistanceBar" parent="PanelContainer/MarginContainer/StatVBox/HBoxContainer" instance=ExtResource("6_t6mx6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
texture_under = ExtResource("7_yl4jj")
texture_progress = ExtResource("8_g7fh3")
nine_patch_margins = Vector4(0, 0, 309, 7)

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/StatVBox"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/StatVBox/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 18

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/StatVBox/HBoxContainer2/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("10_ecmql")
stretch_mode = 5

[node name="PoisonResistanceBar" parent="PanelContainer/MarginContainer/StatVBox/HBoxContainer2" instance=ExtResource("6_t6mx6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
texture_under = ExtResource("7_yl4jj")
texture_progress = ExtResource("8_g7fh3")
nine_patch_margins = Vector4(0, 0, 309, 7)

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/StatVBox"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/MarginContainer/StatVBox/HBoxContainer3"]
layout_mode = 2
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 18

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/StatVBox/HBoxContainer3/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("11_uai4j")
stretch_mode = 5

[node name="DrugResistanceBar" parent="PanelContainer/MarginContainer/StatVBox/HBoxContainer3" instance=ExtResource("6_t6mx6")]
unique_name_in_owner = true
layout_mode = 2
texture_under = ExtResource("7_yl4jj")
texture_progress = ExtResource("8_g7fh3")
nine_patch_margins = Vector4(0, 0, 309, 7)
